trunk/Archive2/58/639083daa9d084/output
main.cpp:4:5: error: constructor for 'S' must explicitly initialize the reference member 'r'
    S() {
    ^
main.cpp:2:10: note: declared here
    int &r;
         ^
main.cpp:5:14: error: non-const lvalue reference to type 'int' cannot bind to a temporary of type 'int'
        int &r = 5;
             ^   ~
2 errors generated.
