trunk/Archive2/58/639083daa9d084/main.cpp
struct S {
    int &r;
    
    S() {
        int &r = 5;
    }
};

int main() {
    S s;   
}